# CSRAssist

./: .pylintrc  README.md  pyproject.toml
discord_integration/: README.md  discord_bot.py  example_bot.py
ocr_integration/: README.md  ocr.py
rawtext_to_relevant_information/: research.md
router/: README.md  aipa.py
slack_integration/: README.md  slack_bot.py
stringlist_semantics/: README.md  research.md  stringlist.py
