[tool.poetry]
name = "csrassist"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
requests = "^2.31.0"
openai = "^1.3.4"
langchain = "^0.0.339"
easyocr = "^1.7.1"
slack-bolt = "^1.18.1"
redis = "^5.0.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
